--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "507dce51-b8ac-4b08-9918-dff1d43f2e0f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
